--- a/modulo06/package.json
+++ b/modulo06/package.json
@@ -30,7 +30,8 @@
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.58.0",
     "prettier": "^1.19.1",
-    "react-test-renderer": "16.9.0"
+    "react-test-renderer": "16.9.0",
+    "reactotron-react-native": "^4.0.3"
   },
   "jest": {
     "preset": "react-native"
