--- a/modulo06/package.json
+++ b/modulo06/package.json
@@ -20,7 +20,8 @@
     "react-native-screens": "^2.1.0",
     "react-navigation": "^4.2.2",
     "react-navigation-stack": "^2.2.2",
-    "reactotron-react-native": "^4.0.3"
+    "reactotron-react-native": "^4.0.3",
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
