--- a/modulo06/package.json
+++ b/modulo06/package.json
@@ -11,6 +11,7 @@
     "postinstall": "jetifier -r"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.8.1",
     "@react-native-community/masked-view": "^0.1.6",
     "axios": "^0.19.2",
     "react": "16.9.0",
